fix(guess-the-word): prevent word container shifting when correct word is showing

--- a/vanilla/guess-the-word/src/styles/game-card/word.css
+++ b/vanilla/guess-the-word/src/styles/game-card/word.css
@@ -15,6 +15,10 @@
   user-select: none;
 }
 
+.game-card .word__letter {
+  width: 1ch;
+}
+
 .game-card .word:not(.word[data-completed]) .word__letter[data-used] {
   color: var(--black);
 }
